cmake_minimum_required(VERSION 3.22)
project(1CDEV C)

set(CMAKE_C_STANDARD 99)

add_executable(1CDEV main.c Level.c Fonction.c cardinal.c level1.c level21.c level10.c level2.c level3.c level4.c level5.c level6.c level7.c level8.c level9.c level11.c level12.c level13.c level14.c level15.c level16.c level17.c level18.c level19.c level20.c level22.c level23.c level25.c level26.c level24.c level27.c level28.c level29.c level30.c)
